--- a/backend/inventory_management/.env
+++ b/backend/inventory_management/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb+srv://inventoryManagement:wUbq9YVGCfoZo68Y@cluster0.3oeok.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://inventoryManagement:wUbq9YVGCfoZo68Y@cluster0.3oeok.mongodb.net/inventoryManagement?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET=123456789abcdeskhdhfjslfjlg
+
 
