--- a/backend/inventory_management/.env
+++ b/backend/inventory_management/.env
@@ -3,3 +3,8 @@ MONGO_URI=mongodb+srv://inventoryManagement:wUbq9YVGCfoZo68Y@cluster0.3oeok.mong
 JWT_SECRET=123456789abcdeskhdhfjslfjlg
 
 
+CLOUDINARY_CLOUD_NAME=duapnvshl
+CLOUDINARY_API_KEY=885674249112943
+CLOUDINARY_API_SECRET=JvfhanbGu1Vir03_yDtCZh-dsR8
+
+
